# uSIP

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  simple_sip_client.py  usip_cli.py
src/sip_client/: __init__.py  client.py
src/sip_client/audio/: __init__.py  devices.py  manager.py
src/sip_client/models/: __init__.py  account.py  call.py  enums.py
src/sip_client/sip/: __init__.py  authentication.py  messages.py  protocol.py
src/sip_client/utils/: __init__.py  helpers.py
